初步实现歌曲上一首下一首播放

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".song.SongPickerActivity"
+            android:label="添加歌曲" />
     </application>
 
 </manifest>
