--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".MusicApplication"
         android:allowBackup="true"
         android:icon="@drawable/music"
         android:label="@string/app_name"
