--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.github.promeg:tinypinyin:2.0.3'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+//    api 'com.google.guava:guava:27.1-android'
 }
