新增在通知界面显示喜欢图标

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,9 @@
             android:exported="false">
             <intent-filter>
                 <action android:name="com.mzz.zmusicplayer.ACTION.PLAY_TOGGLE" />
+                <action android:name="com.mzz.zmusicplayer.ACTION_FAVORITE" />
                 <action android:name="com.mzz.zmusicplayer.ACTION.PLAY_NEXT" />
-                <action android:name="com.mzz.zmusicplayer.ACTION.PLAY_LAST" />
+                <action android:name="com.mzz.zmusicplayer.ACTION.PLAY_PRE" />
                 <action android:name="com.mzz.zmusicplayer.ACTION.STOP_SERVICE" />
             </intent-filter>
         </service>
