--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+RELEASE_KEY_PASSWORD=mzzmusic
+RELEASE_KEY_ALIAS=mzz-music
+RELEASE_STORE_PASSWORD=mzzmusic
+RELEASE_STORE_FILE=D\:/software/Java/android/KeyStore/ZMusicPlayer.jks
 
