--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ android {
     repositories {
         flatDir { dirs 'libs' }
     }
+    android {
+        defaultConfig {
+            ndk {
+                abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            }
+        }
+    }
     android.applicationVariants.all {
         variant ->
             variant.outputs.all {
@@ -70,4 +77,5 @@ dependencies {
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.github.promeg:tinypinyin:2.0.3'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+    implementation 'com.iqiyi.xcrash:xcrash-android-lib:2.4.9'
 }
