--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 5
-        versionName "1.4"
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -78,4 +78,6 @@ dependencies {
     implementation 'com.github.promeg:tinypinyin:2.0.3'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
     implementation 'com.iqiyi.xcrash:xcrash-android-lib:2.4.9'
+    implementation("com.google.guava:guava:28.2-android")
+    implementation 'org.apache.commons:commons-lang3:3.9'
 }
