--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,13 @@ android {
         applicationId "com.mzz.zmusicplayer"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 5
-        versionName "1.5"
+        versionCode 6
+        versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -81,4 +85,5 @@ dependencies {
     implementation("com.google.guava:guava:28.2-android")
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.tencent.bugly:crashreport:3.1.0'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
 }
