--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,10 @@ android {
         versionCode 6
         versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk {
-            // 设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-        }
+//        ndk {
+//            // 设置支持的SO库架构
+//            abiFilters 'armeabi', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+//        }
     }
     buildTypes {
         release {
@@ -40,13 +40,6 @@ android {
     }
     repositories {
         flatDir { dirs 'libs' }
-    }
-    android {
-        defaultConfig {
-            ndk {
-                abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-            }
-        }
     }
     android.applicationVariants.all {
         variant ->
@@ -81,7 +74,6 @@ dependencies {
     implementation 'tyrantgit:explosionfield:1.0.1'
     implementation 'com.github.promeg:tinypinyin:2.0.3'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-    implementation 'com.iqiyi.xcrash:xcrash-android-lib:2.4.9'
     implementation("com.google.guava:guava:28.2-android")
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.tencent.bugly:crashreport:3.1.0'
