--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mzz.zmusicplayer">
+        package="com.mzz.zmusicplayer">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -13,20 +13,21 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
-        android:name=".MusicApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/music"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/music"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name=".MusicApplication"
+            android:allowBackup="true"
+            android:icon="@drawable/music"
+            android:label="@string/app_name"
+            android:networkSecurityConfig="@xml/network_security_config"
+            android:roundIcon="@drawable/music"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.AppSettingActivity"
-            android:label="配置" />
+                android:name=".ui.AppSettingActivity"
+                android:label="配置" />
         <activity
-            android:name=".MainActivity"
-            android:launchMode="singleInstance"
-            android:theme="@style/StyledIndicators">
+                android:name=".MainActivity"
+                android:launchMode="singleInstance"
+                android:theme="@style/StyledIndicators">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,18 +37,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MusicSearchActivity"
-            android:label="搜索" />
+                android:name=".ui.MusicSearchActivity"
+                android:label="搜索" />
         <activity
-            android:name=".ui.SongPickerActivity"
-            android:label="添加歌曲" />
+                android:name=".ui.SongPickerActivity"
+                android:label="添加歌曲" />
         <activity
-            android:name=".ui.SongEditActivity"
-            android:label="编辑歌曲" />
+                android:name=".ui.SongEditActivity"
+                android:label="编辑歌曲" />
 
         <service
-            android:name=".play.PlaybackService"
-            android:exported="false">
+                android:name=".play.PlaybackService"
+                android:exported="false">
             <intent-filter>
                 <action android:name="com.mzz.zmusicplayer.ACTION.PLAY_TOGGLE" />
                 <action android:name="com.mzz.zmusicplayer.ACTION.FAVORITE" />
@@ -59,6 +60,13 @@
         </service>
 
         <receiver android:name=".receiver.HeadsetReceiver" />
+        <meta-data
+                android:name="BUGLY_APPID"
+                android:value="8e001177e2" />
+        <!-- 配置APP版本号 -->
+        <meta-data
+                android:name="BUGLY_APP_VERSION"
+                android:value="1.6" />
     </application>
 
 </manifest>
