--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 RELEASE_KEY_PASSWORD=mzzmusic
-RELEASE_KEY_ALIAS=mzz-music
+RELEASE_KEY_ALIAS=musicplayer
 RELEASE_STORE_PASSWORD=mzzmusic
 RELEASE_STORE_FILE=D\:/software/Java/android/KeyStore/ZMusicPlayer.jks
+android.useAndroidX=true
+android.enableJetifier=true
 
