--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:networkSecurityConfig="@xml/network_security_config"
             android:roundIcon="@drawable/music"
             android:supportsRtl="true"
+            android:requestLegacyExternalStorage="true"
             android:theme="@style/AppTheme">
         <activity
                 android:name=".view.ui.AppSettingActivity"
